News: Paste Script
==================

.. contents::

1.7.5
-----

* Import CherryPy directly instead of including its server inline in the
  ``paste.script`` package.  You must install CherryPy before using
  ``egg:PasteScript#cherrypy``

1.7.4.2
-------

* 1.7.4 had package release problems, was reverted; 1.7.4.1 also had
  package problems.

* Include special ``here`` and ``__file__`` default vars for logging
  config files, similar to PasteDeploy config loading.

* Allow Jython to import various bits from ``paste.script.command`` and
  ``paste.script.copydir`` without throwing an import error (subprocess
  module cannot be imported on Jython).  This allows PasteScript to work
  minimally on Jython, although execution will fail for
  ``command.run_command`` and ``copydir.copydir``.

1.7.3
-----

* CherryPy wsgiserver updated to 3.1.1, fixes a regression in Python
  2.5 plus a couple other small fixes.

1.7.2
-----

* Fix a packaging issue that could cause problems when installing
  PasteScript.

1.7.1
-----

* filemaker.py's FileOp can now handle a tuple as a source_dir argument that
  should function the same as the _template_dir option for pkg_resources.

* CherryPy wsgiserver updated to trunk@2063 for Python 2.6
  compatibility.

1.7
---

* _template_dir now takes a tuple argument, which should be the
  package name, and the relative location to the package of its template
  directory. pkg_resources will then be used to load make the templates
  rather than raw file access making it zip-safe.

* CherryPy wsgiserver updated to the 3.1.0 release's.

* Support Python 2.6.

* Added experimental support for a quicker paster serve --reload for
  Jython.

* Non-Python files in ``paste/script/templates/`` causes an error on
  2.6; renamed directory to avoid this.

1.6.3
-----

* Fixes for ``paste.script.filemaker``

* A setuptools ``egg_info.writers`` entry point is now provided that's
  responsible for writing paster_plugins.txt for projects that define